# medziu-apsupty

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.sh  speaker_test.py
.cursor/rules/: architecture.mdc
base_speakers/: cli.py  melody.py  melody_config.py
base_speakers/audio_backend/: base.py  chromecast.py  sound_device.py
feed/: main.py  pyproject.toml  test_video.py
feed/base_speakers/: cli.py
server/: face_tracker.py  hand_tracker.py  main.py  pyproject.toml  video_processor.py  wekinator.py
server/analysis/: __init__.py  base.py  face_processor.py  hand_processor.py  pipeline.py
server/analysis/output/: __init__.py  base_beat.py
