[project]
name = "medziu-apsupty-feed"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "sounddevice",
    "PyChromecast",
    "python-osc",
    # Deps for test video
    "opencv-python",
    "websockets",
]

[project.scripts]
feed = "base_speakers.cli:main"
test-video = "test_video:main"
