[project]
name = "medziu-apsupty-server"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "opencv-python-headless",
    "numpy",
    "websockets",
    "mediapipe",
    "python-osc",
]

[tool.setuptools]
py-modules = ["main", "video_processor", "wekinator", "hand_tracker", "face_tracker"]

[project.scripts]
server = "main:main"
